Fix: App was zoomable on mobile now fixed.

--- a/index.css
+++ b/index.css
@@ -59,6 +59,10 @@ input {
     font-family: 'Rubik', sans-serif;
 }
 
+input, button, select, textarea {
+  font-size: 16px;
+}
+
 #error-msg {
     color: red;
     font-size: 0.9em;
